Symbol without index, instead symbol is base for Terminal and Nonterminal